--- a/main.html
+++ b/main.html
@@ -8,8 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div class="container">
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+        </nav>
+        <h1>3 Random Images</h1>
+        <div class="img">
+            <img src="https://picsum.photos/id/123/200/300" alt="Random image" width="500px" height="570px">
+            <img src="https://picsum.photos/id/124/200/300" alt="Random image" width="500px" height="570px">
+            <img src="https://picsum.photos/id/125/200/300" alt="Random image" width="500px" height="570px">
+        </div>
+    </div>
 
 </body>
 
