--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
                 <li><a href="">Contact Us</a></li>
             </ul>
         </nav>
-        <h1>3 Random Images</h1>
+        <h1>3 random images</h1>
         <div class="img">
             <img src="https://picsum.photos/id/123/200/300" alt="Random image" width="500px" height="570px">
             <img src="https://picsum.photos/id/124/200/300" alt="Random image" width="500px" height="570px">
